--- a/work/okeyLib/okeyLib.vcxproj.filters
+++ b/work/okeyLib/okeyLib.vcxproj.filters
@@ -347,6 +347,9 @@
     <ClInclude Include="inc\TClass.h">
       <Filter>TClass</Filter>
     </ClInclude>
+    <ClInclude Include="inc\ClassFunctor.h">
+      <Filter>TClass</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="inc\PoolAllocator.inl">
